fix(footer): only show back-to-top button on mobile

--- a/public/style/scss/_device-changes.scss
+++ b/public/style/scss/_device-changes.scss
@@ -28,6 +28,10 @@
     display: none;
   }
 
+  .back-to-top {
+    display: inline-block;
+  }
+
   .stat-box {
     display: none;
   }
